--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
     <!-- optimize imports-->
-    <link rel="stylesheet" href="styles/index.css"/>
-    <link rel="stylesheet" href="styles/checkout-block.css"/>
-    <link rel="stylesheet" href="styles/form.css"/>
-    <link rel="stylesheet" href="styles/buttons.css"/>
-    <link rel="stylesheet" href="styles/order-info.css"/>
+    <link rel="stylesheet" href="src/styles/index.css"/>
+    <link rel="stylesheet" href="src/styles/checkout-block.css"/>
+    <link rel="stylesheet" href="src/styles/form.css"/>
+    <link rel="stylesheet" href="src/styles/buttons.css"/>
+    <link rel="stylesheet" href="src/styles/order-info.css"/>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,7 +27,7 @@
         <div class="checkout-bar" id="checkout-bar">
 
             <div class="checkout-arrow" id="checkout-arrow">
-                <object type="image/svg+xml" data="./icons/Back.svg" class="icon"></object>
+                <object type="image/svg+xml" data="src/icons/Back.svg" class="icon"></object>
             </div>
 
             <!-- purchase info -->
@@ -42,7 +42,7 @@
 
             <div class="checkout-lang" id="checkout-lang">
                 <div class="checkout-arrow">
-                    <object type="image/svg+xml" data="./icons/UA-lang.svg" class="icon"></object>
+                    <object type="image/svg+xml" data="src/icons/UA-lang.svg" class="icon"></object>
                 </div>
             </div>
 
@@ -60,7 +60,7 @@
                 <div id="checkout-bar-big-scr">
                     <div id="checkout-header-big-scr">
                         <div class="checkout-arrow" id="checkout-arrow-big-scr">
-                            <object type="image/svg+xml" data="./icons/Back.svg" class="icon"></object>
+                            <object type="image/svg+xml" data="src/icons/Back.svg" class="icon"></object>
                         </div>
                         <div id="upper-checkout-text-big-scr" class="upper-checkout-text">Checkout</div>
                     </div>
@@ -77,13 +77,13 @@
                     <!-- This section has 5 toggles for buttons display -->
                     <div class="btn-variations">
                         <button class="button apple-pay-btn hidden" id="Google" onclick="handleButtonClick()">
-                            <object type="image/svg+xml" data="./icons/Gpay_logo.svg" class="icon" ></object>
+                            <object type="image/svg+xml" data="src/icons/Gpay_logo.svg" class="icon" ></object>
                         </button>
                         <button class="button apple-pay-btn" id="Apple" onclick="handleButtonClick()">
-                            <object type="image/svg+xml" data="./icons/Apple_Pay_logo.svg" class="icon"></object>
+                            <object type="image/svg+xml" data="src/icons/Apple_Pay_logo.svg" class="icon"></object>
                         </button>
                         <button class="button apple-pay-btn hidden" id="PayPal" onclick="handleButtonClick()">
-                            <object type="image/svg+xml" data="./icons/Paypal.svg" class="icon"></object>
+                            <object type="image/svg+xml" data="src/icons/Paypal.svg" class="icon"></object>
                         </button>
                     </div>
 
@@ -130,7 +130,7 @@
                                         <label for="card-cvc">CVC</label>
                                         <!--or type=password-->
                                         <div class="icon">
-                                            <object type="image/svg+xml" class="info" data="./icons/Info.svg"></object>
+                                            <object type="image/svg+xml" class="info" data="src/icons/Info.svg"></object>
                                         </div>
                                         <input
                                                 type="text"
@@ -151,7 +151,7 @@
                                 <span class="trial-btn-cmpx-title" id="trial-btn-cmpx-title">
                                     <span id="trial-btn-title-text" class="title ">Start Trial</span>
                                     <span id="trial-btn-processing-group" class="title processing-group trial-btn-cmpx-title hidden">
-                                        <object id="trial-btn-title-icon" type="image/svg+xml" data="./icons/Loader.svg" class="icon"></object>
+                                        <object id="trial-btn-title-icon" type="image/svg+xml" data="src/icons/Loader.svg" class="icon"></object>
                                         <span id="trial-btn-title-processing">Processing payment</span>
                                     </span>
                                 </span>
@@ -182,10 +182,10 @@
                 <!-- lang toggle for 100+px screen-->
                 <div class="checkout-lang" id="checkout-lang-big-scr">
                     <div class="checkout-arrow">
-                        <object type="image/svg+xml" data="./icons/EN-lang.svg" class="icon"></object>
+                        <object type="image/svg+xml" data="src/icons/EN-lang.svg" class="icon"></object>
                     </div>
                     <div class="checkout-arrow">
-                        <object type="image/svg+xml" data="./icons/UA-lang.svg" class="icon"></object>
+                        <object type="image/svg+xml" data="src/icons/UA-lang.svg" class="icon"></object>
                     </div>
                 </div>
 
@@ -217,13 +217,13 @@
     <footer>
         <div class="footer-content">
             <p>Powered by </p>
-            <object type="image/svg+xml" data="./icons/Solid.svg"></object>
+            <object type="image/svg+xml" data="src/icons/Solid.svg"></object>
         </div>
 
     </footer>
 </body>
 
-<script src="./scripts/index.js" type="text/javascript"></script>
-<script src="scripts/payBtnChange.js" type="text/javascript"></script>
+<script src="src/scripts/index.js" type="text/javascript"></script>
+<script src="src/scripts/payBtnChange.js" type="text/javascript"></script>
 
 </html>
